# cuboid-wars

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  launch_clients.sh
client/: Cargo.toml
client/assets/: README.md
client/assets/models/: player.glb
client/assets/textures/: combine_metallic_roughness.sh  multiply_intensity.sh
client/src/: client.rs  components.rs  config.rs  constants.rs  events.rs  game.rs  input.rs  io.rs  lib.rs  main.rs  markers.rs  messages.rs  net.rs  network.rs  resources.rs  spawning.rs  sync.rs  systems.rs  ui.rs  world.rs
client/src/spawning/: item.rs  map.rs  mod.rs  player.rs  projectile.rs  sentry.rs
client/src/spawning/map/: helpers.rs  mod.rs  ramps.rs  roofs.rs  walls.rs
client/src/systems/: animations.rs  cameras.rs  collision.rs  effects.rs  ghosts.rs  input.rs  items.rs  map.rs  mod.rs  movement.rs  network.rs  players.rs  projectiles.rs  rendering.rs  sentries.rs  skybox.rs  spawning.rs  sync.rs  ui.rs  walls.rs
client/src/systems/input/: mod.rs  movement.rs  shooting.rs  toggles.rs
client/src/systems/network/: components.rs  items.rs  login.rs  messages.rs  mod.rs  players.rs  sentries.rs  systems.rs
client/src/systems/players/: camera.rs  components.rs  effects.rs  mod.rs  movement.rs  rendering.rs
common/: Cargo.toml
common/src/: collision.rs  components.rs  config.rs  constants.rs  io.rs  lib.rs  map.rs  markers.rs  net.rs  players.rs  protocol.rs  ramps.rs  spawning.rs  systems.rs
common/src/collision/: ghosts.rs  helpers.rs  items.rs  mod.rs  players.rs  projectile.rs  projectiles.rs  ramps.rs  sentries.rs
server/: Cargo.toml
server/src/: components.rs  config.rs  constants.rs  events.rs  game.rs  io.rs  lib.rs  main.rs  map.rs  messages.rs  net.rs  resources.rs  server.rs  systems.rs  walls.rs
server/src/map/: collision.rs  grid.rs  helpers.rs  lights.rs  mod.rs  ramps.rs  roofs.rs  utils.rs  walls.rs
server/src/systems/: collision.rs  ghosts.rs  items.rs  mod.rs  movement.rs  network.rs  players.rs  projectiles.rs  sentries.rs
server/src/systems/network/: broadcast.rs  connection.rs  login.rs  messages.rs  mod.rs  systems.rs
server/src/systems/sentries/: mod.rs  movement.rs  navigation.rs  spawn.rs  systems.rs
