[workspace]
members = ["common", "server", "client"]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]

pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unwrap_used = "warn"
expect_used = "allow"
panic = "allow"
todo = "warn"
unimplemented = "warn"
wildcard_imports = "allow"
