[package]
name = "client"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[features]
default = ["bincode"]
json = ["dep:serde", "dep:serde_json", "common/json"]
bincode = ["dep:bincode", "common/bincode"]

[dependencies]
common = { path = "../common" }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
bincode = { version = "2.0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
bevy = "0.17"
rand = "0.8"
whoami = "1.6.1"
