[package]
name = "client"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
bincode = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
bevy = { version = "0.17", features = ["vorbis", "wav", "jpeg"] }
rand = "0.9"
whoami = "1.6"
