[package]
name = "common"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_log"] }
bevy_ecs = "0.17"
bevy_math = "0.17"
bevy_time = "0.17"
bincode = "2.0"
quinn = "0.11"
anyhow = "1"
rustls = { version = "0.23", default-features = false }
rustls-pemfile = "2"
