[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
